--- a/app/src/main/res/drawable/close_target_bg.xml
+++ b/app/src/main/res/drawable/close_target_bg.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    
-    <solid android:color="#F44336" />
-    
+
+    <solid android:color="#FFFFFF" />
+
+    <stroke
+        android:width="3dp"
+        android:color="#E0E0E0" />
+
     <size
-        android:width="80dp"
-        android:height="80dp" />
+        android:width="120dp"
+        android:height="120dp" />
 </shape>
