--- a/app/src/main/res/drawable/close_target_bg.xml
+++ b/app/src/main/res/drawable/close_target_bg.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#00000000" />
 
     <stroke
-        android:width="3dp"
-        android:color="#E0E0E0" />
+        android:width="4dp"
+        android:color="#FFFFFF" />
 
     <size
-        android:width="120dp"
-        android:height="120dp" />
+        android:width="100dp"
+        android:height="100dp" />
 </shape>
