--- a/app/src/main/res/layout/close_target.xml
+++ b/app/src/main/res/layout/close_target.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/close_target_frame"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
+    android:layout_width="70dp"
+    android:layout_height="70dp"
     android:background="@drawable/close_target_bg">
 
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/close_icon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_close"
         android:contentDescription="Close" />
